--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,33 @@ dependencies:
   cached_network_image: ^3.3.0
   flutter_svg: ^2.0.9
   smooth_page_indicator: ^1.1.0
+  shared_preferences: ^2.0.12
+
   intl: ^0.18.0
-dev_dependencies: 
+dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test: 
     sdk: flutter
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/mages/launcher_icon.png"
+#  min_sdk_android: 21 # android min sdk min:16, default 21
+#  web:
+#    generate: true
+#    image_path: "path/to/image.png"
+#    background_color: "#hexcode"
+#    theme_color: "#hexcode"
+#  windows:
+#    generate: true
+#    image_path: "path/to/image.png"
+#    icon_size: 48 # min:48, max:256, default: 48
+#  macos:
+#    generate: true
+#    image_path: "path/to/image.png"
+
+
+
 flutter: 
   uses-material-design: true
   assets: 
