--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   shared_preferences: ^2.0.12
 
   intl: ^0.18.0
+  yandex_mapkit: ^3.4.0
+  permission_handler: ^11.3.0
+  cupertino_icons: ^1.0.6
 dev_dependencies:
   flutter_test: 
     sdk: flutter
