--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,7 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation 'com.yandex.android:maps.mobile:4.4.0-full'
+}
+
